# zxnz-svn-to-git

trunk/: Makefile.am  Makefile.in  autogen.sh  configure  configure.ac
trunk/app/: Makefile.am  Makefile.in  console.c  debug.h  guessnum.h  test.c  zz-log.c  zz-log.h
trunk/console/: Makefile  README  console.c  guessnum.c
trunk/lib/: Makefile.am  Makefile.in  bar.c  lib.c
wiki/: PageName.wiki
